--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
+        "test:coverage": "jest --coverage",
         "build": "tsc",
         "start": "node dist/index.js",
         "start:dev": "nodemon src/index.ts",
@@ -19,12 +20,17 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/express": "^4.17.21",
+        "@types/jest": "^29.5.12",
+        "@types/supertest": "^6.0.2",
         "@typescript-eslint/eslint-plugin": "^7.10.0",
         "@typescript-eslint/parser": "^7.10.0",
         "eslint": "^8.57.0",
+        "jest": "^29.7.0",
         "nodemon": "^3.1.0",
         "prettier": "^3.2.5",
         "prisma": "^5.14.0",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.1.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.4.5"
     },
