feat(auth): auth verify and profile

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
+NODE_ENV="development"
 DATABASE_URL=""
 CLIENT_URL=""
 PORT=""
 JWT_ACCESS_SECRET=""
 JWT_REFRESH_SECRET=""
+JWT_VERIFY_SECRET=""
+MAIL_HOST=""
+MAIL_PORT=""
+MAIL_USER=""
+MAIL_PASS=""
