--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@types/express": "^4.17.21",
         "@types/jest": "^29.5.12",
         "@types/jsonwebtoken": "^9.0.6",
+        "@types/nodemailer": "^6.4.15",
         "@types/supertest": "^6.0.2",
         "@typescript-eslint/eslint-plugin": "^7.10.0",
         "@typescript-eslint/parser": "^7.10.0",
@@ -45,6 +46,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^6.9.13",
         "winston": "^3.13.0",
         "zod": "^3.23.8"
     }
